--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.8
     google_maps_flutter: ^2.10.1
+    geolocator: ^13.0.3
     flutter_dotenv: ^5.2.1
 
 dev_dependencies:
