--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     envied: ^0.5.3
     flutter_map: ^6.0.1
     latlong2: ^0.9.0
+    flutter_riverpod: ^2.4.9
 
 dev_dependencies:
     flutter_test:
