--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     flutter_map: ^6.0.1
     latlong2: ^0.9.0
     flutter_riverpod: ^2.4.9
+    http: ^1.1.0 # 追加：Overpass APIを呼び出すために必要
 
 dev_dependencies:
     flutter_test:
